--- a/api_gateway/Cargo.toml
+++ b/api_gateway/Cargo.toml
@@ -18,6 +18,7 @@ serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
 tonic = "0.6.1"
 uuid = { version = "1.2.2", features = ["serde", "v4"] }
+prost-types = "0.9"
 
 [build-dependencies]
 tonic-build = "0.6.1"
