--- a/user_management/.env
+++ b/user_management/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://davidgarcial:DGL482dti@bank.zqghszz.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=insertusrl
 GRPC_SERVER_ADDRESS=127.0.0.1:50051
