--- a/historical_service/Cargo.toml
+++ b/historical_service/Cargo.toml
@@ -9,7 +9,8 @@ tokio = { version = "1", features = ["full"] }
 prost = "0.9"
 mongodb = "2.0"
 dotenv = "0.15"
-uuid = { version = "1.2.2", features = ["serde", "v4"] }
+futures = "0.3"
+prost-types = "0.9"
 
 [build-dependencies]
 tonic-build = "0.6"
