Add docker files

--- a/api_gateway/.env
+++ b/api_gateway/.env
@@ -2,7 +2,8 @@ JWT_SECRET=my_ultra_secure_secret
 JWT_EXPIRED_IN=60m
 JWT_MAXAGE=60
 
-USER_GRPC_SERVICE_URL=127.0.0.1:50051
+USER_GRPC_SERVICE_URL=localhost:50051
 ACCOUNT_GRPC_SERVICE_URL=127.0.0.1:50052
 DEPOSIT_GRPC_SERVICE_URL=127.0.0.1:50053
 WITHDRAWAL_GRPC_SERVICE_URL=127.0.0.1:50054
+HISTORICAL_GRPC_SERVICE_URL=127.0.0.1:50055
