--- a/user_service/Cargo.toml
+++ b/user_service/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "user_management"
+name = "user_service"
 version = "0.1.0"
 edition = "2021"
 
@@ -10,6 +10,7 @@ prost = "0.9"
 mongodb = "2.0"
 dotenv = "0.15"
 uuid = { version = "1.2.2", features = ["serde", "v4"] }
+lazy_static = "1.4.0"
 
 [build-dependencies]
 tonic-build = "0.6"
