--- a/api_gateway/Cargo.toml
+++ b/api_gateway/Cargo.toml
@@ -8,6 +8,7 @@ actix-cors = "0.6.4"
 actix-web = "4.3.0"
 argon2 = "0.5"
 chrono = { version = "0.4.23", features = ["serde"] }
+tokio = { version = "1.16", features = ["full"] }
 dotenv = "0.15.0"
 env_logger = "0.10.0"
 log = "0.4.11"
