--- a/historical_service/Cargo.toml
+++ b/historical_service/Cargo.toml
@@ -11,6 +11,8 @@ mongodb = "2.0"
 dotenv = "0.15"
 futures = "0.3"
 prost-types = "0.9"
+log = "0.4"
+env_logger = "0.9"
 
 [build-dependencies]
 tonic-build = "0.6"
