--- a/user_service/Cargo.toml
+++ b/user_service/Cargo.toml
@@ -11,6 +11,8 @@ mongodb = "2.0"
 dotenv = "0.15"
 uuid = { version = "1.2.2", features = ["serde", "v4"] }
 lazy_static = "1.4.0"
+log = "0.4"
+env_logger = "0.9"
 
 [build-dependencies]
 tonic-build = "0.6"
